# Plating

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  makefile
include/plating/: FileReader.h  HashFunction.h  HashMap.h  LinkedList.h  LogAPI.h  LogLevel.h  Logger.h  MemoryUtils.h  PathUtils.h  StringBuffer.h  TestUtils.h  Vector.h
resources/test/: testfile.txt
src/main/: CMakeLists.txt  FileReader.c  LogAPI.c  Logger.c  MemoryUtils.c  PathUtils.c  StringBuffer.c  TestUtils.c  Vector.c
src/main/structs/: HashMap.h  LinkedList.h
src/main/utils/: HashFunction.h  LogLevels.h  Logger.h  MemoryUtils.h
src/test/: CMakeLists.txt  FileReaderTest.h  HashMapTest.h  LinkedListTest.h  PlatingTests.c  StringBufferTest.h  VectorTest.h  tests.c
